operator/pkg/gateway-api/testdata/gateway/gateway-invalid-route-kind/input/gateway-invalid-route-kind.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-only-invalid-route-kind
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: InvalidRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-supported-and-invalid-route-kind
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: InvalidRoute
          - kind: HTTPRoute
